test_suite5/ALAN/test_suite/alan-2022-examples/failing/003220_mutation.alan
source P begin if 536 then relax else begin relax end end
